<resources>
    <string name="app_name">Saintscript</string>

    <string name="welcome_login">Bienvenido a</string>
    <string name="nickname">Nombre de Usuario</string>
    <string name="email">"Correo electrónico"</string>
    <string name="pass">"Contraseña"</string>
    <string name="session_active">No cerrar sesión</string>
    <string name="sign_in">Iniciar Sesión</string>
    <string name="register">"¿Aún no tienes una cuenta? "</string>

    <string name="lets_start">¡Vamos A Comenzar!</string>
    <string name="msg_create_account">Crea tu cuenta para unirte con nosotros</string>
    <string name="names">Nombre(s)</string>
    <string name="last_names">Apellidos</string>
    <string name="confirmPass">Confirmar contraseña</string>
    <string name="create_account">Crear cuenta</string>

    <string name="title_home">Descubre lo que está pasando</string>

    <string name="subred_register_title">Registro Subred</string>
    <string name="subred_register_description">¿Eres el encargado de la reunion de lideres de celula? Entonces aquí puedes registrar los datos de asistencia y lo recaudado.</string>
    <string name="btn_enteroky">Ingresar datos</string>
    <string name="celular_register_title">Registro Celula</string>
    <string name="celula_register_description">¿Eres líder de una celula? Registra aquí los datos de tus reuniones</string>

    <string name="daily_history_register_title">Historico Diario</string>
    <string name="weekly_history_register_title">Historico Semanal</string>
    <string name="btn_see_data">Ver datos</string>
    <string name="daily_history_register_description">Checa quienes han registrado los datos en las reuniones de células por medio de un calendario y ahí podrás verificar el registro por usuarios.</string>
    <string name="weekly_history_register_description">Checa cuanto se ha recaudado semanalmente por todas las reuniones de celula realizadas en dicha semana.</string>

    <string name="profile_configurarion_title">Perfil</string>
    <string name="create_subred_celula_configurarion_title">Crear Subred / Celula</string>
    <string name="user_managment_configurarion_title">Administrar Usuarios</string>
    <string name="upload_notice_configurarion_title">Subir Noticias</string>
    <string name="close_session_configurarion_title">Cerrar Sesión</string>

    <string name="name_data">Nombre</string>
    <string name="assistance_data">Asistencia</string>
    <string name="offering_data">Ofrenda</string>
    <string name="date_data">Fecha</string>
    <string name="btn_send">Enviar</string>

    <string name="subred_title_data">Subred</string>
    <string name="celula_title_data">Celula</string>
    <string name="host_name_data">Nombre Anfitrión</string>
    <string name="guest_data">Invitados</string>
    <string name="child_data">Niños</string>

    <string name="your_data_title_configuration">Tus Datos</string>
    <string name="telephone">Teléfono</string>
    <string name="address">Dirección</string>
    <string name="edit_profile">Editar Perfil</string>
    <string name="save_profile">Guardar</string>

    <string name="notice_title">Título</string>
    <string name="upload_notice">Subir noticia</string>
    <string name="upload_image">Sube una imagen</string>
    <string name="load_gallery">Abrir galeria</string>
    <string name="description_notice">Descripción</string>

    <string name="title_manage_user">Tipos de usuarios</string>
    <string name="normal_user">Normal</string>
    <string name="celula_leader_user">Lideres Celula</string>
    <string name="subred_user">Subred</string>
    <string name="red_user">Red</string>
    <string name="n">N</string>
    <string name="lc">LC</string>
    <string name="s">S</string>
    <string name="r">R</string>

    <string name="search">Buscar</string>
    
    <string name="HostNameAdapter">Anfitrión: %s</string>
    <string name="CelulaNameAdapter">Celula: %s</string>
    <string name="AssistanceAdapter">Asistencia: %s</string>
    <string name="GuestAdapter">Invitados: %s</string>
    <string name="ChildAdapter">Niños: %s</string>
    <string name="OfferingAdapter">Ofrenda: %s</string>

    <string name="AssistanceTotalAdapter">Total asistencia: %s</string>
    <string name="GuestTotalAdapter">Total invitados: %s</string>
    <string name="ChildTotalAdapter">Total niños: %s</string>
    <string name="OfferingTotalAdapter">Total ofrenda: %s</string>

    <string-array name="decimals">
        <item>.00</item>
        <item>.50</item>
    </string-array>

    <string-array name="permissions">
        <item>Normal</item>
        <item>Lider Celula</item>
        <item>Subred</item>
        <item>Red</item>
    </string-array>

    <string name="dat_user">Datos de Usuario</string>
    <string name="btnRed">Red</string>
    <string name="btnSubRed">SubRed</string>
    <string name="btnCedulas">Celulas</string>
    <string name="btnVer">Ver</string>
    <string name="btnBibilia">Biblia</string>
    <string name="btnInformacion">Acerca De</string>
    <string name="txtOtroCelula">Si no aparece tú subred, presione aquí</string>
    <string name="txtRegistro">Introduce los datos</string>

    <string name="txtTotalOfrenda">Total de Ofrenda</string>
    <string name="txtNombreCedula">Nombre de subred</string>
    <string name="txtNombreSubred">Nombre de Subred</string>
    <string name="txtregistrar">Registrar</string>

    <string name="txtNombreRed">Nombre de Red</string>
    <string name="fecha_semanal_celula">Fecha Semanal Celula</string>
    <string name="select_subred">Seleccione a la subred que perteneces</string>
    <string name="select_subred_reg">Seleccione una subred</string>
    <string name="btn_buscar">Buscar </string>
    <string name="btn_ver_registro">Ver registro</string>
    <string name="title_activity_login">Registrate</string>
    <string name="nombres">Nombre(s)</string>
    <string name="apellido_paterno">Apellido Paterno</string>
    <string name="apellido_materno">Apellido Materno</string>
    <string name="domicilio">Domicilio</string>
    <string name="dtSubred">Datos subred</string>

    <string name="direccion">Ubicación y Contactos</string>
    <string name="estado">Estado</string>
    <string name="municipio">Municipio</string>
    <string name="colonia">Colonia</string>
    <string name="calle">Calle</string>
    <string name="num_ext">Numero Exterior</string>
    <string name="codg_pos">Código Postal</string>


    <string name="list_user">Lista de Usuarios: </string>


    <string name="crear">Crear Subred/Celula</string>
    <string name="noticia">Subir Noticias</string>

    <string name="action_sign_in">Sign in or register</string>
    <string name="login_sign_in">Ver</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="sesionInactiva">Cerrar sesión</string>

    <string name="menu_home">Incio</string>
    <string name="menu_tools">Historico</string>
    <string name="menu_biblia">Biblia</string>
    <string name="menu_share">Permisos de usuario</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_principal">Red Cristiana</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
