<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/left_login"
                android:layout_marginTop="79dp"
                android:fontFamily="@font/roboto"
                android:text="@string/welcome_login"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/Headline"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="58dp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/app_name"
                android:textColor="@color/colorAccent"
                android:textSize="50sp"/>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="40dp"
                app:hintEnabled="false"
                android:textColorHint="@color/secondaryPrimaryDark">

                <EditText
                    android:id="@+id/txtCorreoLogin"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:drawableStart="@drawable/baseline_person_black_24"
                    android:hint="@string/email"
                    android:padding="6dp"
                    android:textColorHint="@color/secondaryPrimaryDark"
                    android:inputType="textEmailAddress"
                    android:background="@drawable/custom_edittext_sesion" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="40dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="40dp"
                app:hintEnabled="false"
                android:textColorHint="@color/secondaryPrimaryDark"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/txtPasswordLogin"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:drawableStart="@drawable/baseline_lock_black_24"
                    android:hint="@string/pass"
                    android:padding="5dp"
                    android:inputType="textPassword"
                    android:background="@drawable/custom_edittext_sesion"
                    android:textColorHint="@color/secondaryPrimaryDark" />

            </com.google.android.material.textfield.TextInputLayout>

            <RadioButton
                android:id="@+id/sesion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="55dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="45dp"
                android:text="@string/session_active"
                android:textColor="@color/secondaryPrimaryDark"
                android:textSize="16sp"/>

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="40dp"
                android:background="@drawable/button_start_sesion"
                android:elevation="10dp"
                android:onClick="ingresar"
                android:text="@string/sign_in"
                android:textAllCaps="false"
                android:textColor="@android:color/background_light"
                android:textSize="18sp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="20dp"
                android:gravity="center"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register"
                    android:textSize="16sp"
                    android:textColor="@color/secondaryPrimaryDark"/>

                <Button
                    android:id="@+id/button4"
                    style="@style/transparente"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:background="?selectableItemBackgroundBorderless"
                    android:onClick="registrar"
                    android:text="@string/title_activity_login"
                    android:textAllCaps="false"
                    android:textColor="@color/secondaryPrimaryDark"
                    android:textStyle="bold" />

            </LinearLayout>



        </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>