<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tool="http://schemas.android.com/tools"
    android:layout_margin="@dimen/Small"
    app:cardElevation="@dimen/Diminute"
    app:cardCornerRadius="@dimen/VerySmall">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <View
            android:id="@+id/view"
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:background="@drawable/view_solid_history"/>

        <TextView
            android:id="@+id/tvNameItemHistoryDaily"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/Small"
            android:layout_centerInParent="true"
            android:fontFamily="@font/roboto"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/Headline"
            android:textAlignment="center"
            tool:text="David Antonio" />

        <TextView
            android:id="@+id/tvEmailItemHistoryDaily"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/Small"
            android:layout_alignBottom="@+id/view"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/roboto"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/Subtitle"
            tool:text="dgdband@gmail.com"/>
    </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tvHostNameItemHistoryDaily"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="@dimen/Small"
                android:gravity="center_horizontal"
                android:fontFamily="@font/roboto"
                android:textColor="@color/Black"
                android:textSize="@dimen/Normal"
                tool:text="@string/HostNameAdapter"/>

            <TextView
                android:id="@+id/tvCelulaItemHistoryDaily"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="@dimen/Small"
                android:gravity="center_horizontal"
                android:fontFamily="@font/roboto"
                android:textColor="@color/Black"
                android:textSize="@dimen/Normal"
                tool:text="@string/CelulaNameAdapter" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvAssistanceItemHistoryDaily"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:fontFamily="@font/roboto"
                android:textColor="@color/Black"
                android:textSize="@dimen/Normal"
                tool:text="@string/AssistanceAdapter" />

            <TextView
                android:id="@+id/tvGuestItemHistoryDaily"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:fontFamily="@font/roboto"
                android:textColor="@color/Black"
                android:textSize="@dimen/Normal"
                tool:text="@string/GuestAdapter" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/Small">

            <TextView
                android:id="@+id/tvChildItemHistoryDaily"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:fontFamily="@font/roboto"
                android:textColor="@color/Black"
                android:textSize="@dimen/Normal"
                tool:text="@string/ChildAdapter" />

            <TextView
                android:id="@+id/tvOfferingItemHistoryDaily"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:fontFamily="@font/roboto"
                android:textColor="@color/Black"
                android:textSize="@dimen/Normal"
                tool:text="@string/OfferingAdapter" />
        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>