<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.ui.fragments.DataFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/Small"
            android:layout_marginEnd="@dimen/Small"
            android:layout_marginTop="@dimen/Big"
            app:cardCornerRadius="@dimen/VerySmall"
            app:cardElevation="@dimen/Diminute">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/VerySmall"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/subred_register_title"
                    android:textStyle="bold"
                    android:textColor="@color/colorSecondary"
                    android:textSize="@dimen/Title"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginStart="@dimen/VerySmall"
                    android:layout_marginEnd="@dimen/VerySmall"
                    android:background="@color/colorPrimaryDark"
                    android:alpha="0.5"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/VerySmall"
                    android:fontFamily="@font/roboto"
                    android:text="@string/subred_register_description"
                    android:textColor="@color/Gray"
                    android:textSize="@dimen/Normal"/>
                
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnEnterokySubredDataFragment"
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:layout_marginTop="46dp"
                    android:layout_marginBottom="@dimen/Small"
                    android:layout_marginEnd="@dimen/Small"
                    app:backgroundTint="@color/colorAccent"
                    app:icon="@drawable/ic_arrow_white"
                    app:iconGravity="end"
                    app:cornerRadius="@dimen/Small"
                    android:letterSpacing="0"
                    android:layout_gravity="end"
                    android:text="@string/btn_enteroky"
                    android:textColor="@color/colorPrimary"
                    android:textAllCaps="false"
                    style="@style/Widget.MaterialComponents.Button.Icon"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/Small"
            android:layout_marginEnd="@dimen/Small"
            android:layout_marginTop="@dimen/Big"
            android:layout_marginBottom="@dimen/Big"
            app:cardCornerRadius="@dimen/VerySmall"
            app:cardElevation="@dimen/Diminute">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/VerySmall"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/celular_register_title"
                    android:textStyle="bold"
                    android:textColor="@color/colorSecondary"
                    android:textSize="@dimen/Title"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginStart="@dimen/VerySmall"
                    android:layout_marginEnd="@dimen/VerySmall"
                    android:background="@color/colorPrimaryDark"
                    android:alpha="0.5"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/VerySmall"
                    android:fontFamily="@font/roboto"
                    android:text="@string/celula_register_description"
                    android:textColor="@color/Gray"
                    android:textSize="@dimen/Normal"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnEnterokyCelulaDataFragment"
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:layout_marginTop="46dp"
                    android:layout_marginBottom="@dimen/Small"
                    android:layout_marginEnd="@dimen/Small"
                    app:backgroundTint="@color/colorAccent"
                    app:icon="@drawable/ic_arrow_white"
                    app:iconGravity="end"
                    app:cornerRadius="@dimen/Small"
                    android:letterSpacing="0"
                    android:layout_gravity="end"
                    android:text="@string/btn_enteroky"
                    android:textColor="@color/colorPrimary"
                    android:textAllCaps="false"
                    style="@style/Widget.MaterialComponents.Button.Icon"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>
    </ScrollView>

</FrameLayout>